packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_default_export.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1437
expression: output
---
==INPUT==


import { component$ } from '@khulnasoft.com/qwik';
import { sibling } from './sibling';

export default component$(() => {
    return (
        <div onClick$={() => console.log(mongodb, sibling)}>
        </div>
    );
});


============================= src/routes/_repl/[id]/[[...slug]].js ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./[[...slug]].tsx_slug_component_0AM8HPnkNs4.js"), "slug_component_0AM8HPnkNs4"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/routes/_repl/[id]/[[...slug]].tsx\"],\"names\":[],\"mappings\":\";;AAIA,6BAAe,6HAKZ\"}")
============================= src/routes/_repl/[id]/[[...slug]].tsx_slug_component_div_onClick_xevvy0Qc7pA.js (ENTRY POINT)==

import { sibling } from "./sibling";
export const slug_component_div_onClick_xevvy0Qc7pA = ()=>console.log(mongodb, sibling);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/routes/_repl/[id]/[[...slug]].tsx\"],\"names\":[],\"mappings\":\";sDAMuB,IAAM,QAAQ,GAAG,CAAC,SAAS\"}")
/*
{
  "origin": "src/routes/_repl/[id]/[[...slug]].tsx",
  "name": "slug_component_div_onClick_xevvy0Qc7pA",
  "entry": null,
  "displayName": "[[...slug]].tsx_slug_component_div_onClick",
  "hash": "xevvy0Qc7pA",
  "canonicalFilename": "[[...slug]].tsx_slug_component_div_onClick_xevvy0Qc7pA",
  "path": "src/routes/_repl/[id]",
  "extension": "js",
  "parent": "slug_component_0AM8HPnkNs4",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    157,
    192
  ]
}
*/
============================= src/routes/_repl/[id]/[[...slug]].tsx_slug_component_0AM8HPnkNs4.js ==

import { _jsxQ } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export const slug_component_0AM8HPnkNs4 = ()=>{
    return /*#__PURE__*/ _jsxQ("div", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./[[...slug]].tsx_slug_component_div_onClick_xevvy0Qc7pA.js"), "slug_component_div_onClick_xevvy0Qc7pA")
    }, null, 3, "W4_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/routes/_repl/[id]/[[...slug]].tsx\"],\"names\":[],\"mappings\":\";;0CAI0B;IACtB,qBACI,MAAC;QAAI,QAAQ;;AAGrB\"}")
/*
{
  "origin": "src/routes/_repl/[id]/[[...slug]].tsx",
  "name": "slug_component_0AM8HPnkNs4",
  "entry": "src/routes/_repl/[id]/[[...slug]].tsx_entry_[[...slug]]",
  "displayName": "[[...slug]].tsx_slug_component",
  "hash": "0AM8HPnkNs4",
  "canonicalFilename": "[[...slug]].tsx_slug_component_0AM8HPnkNs4",
  "path": "src/routes/_repl/[id]",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    113,
    218
  ]
}
*/
== DIAGNOSTICS ==

[]
