packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_default_export_invalid_ident.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1483
expression: output
---
==INPUT==


import { component$ } from '@khulnasoft.com/qwik';

export default component$(() => {
    return (
        <div onClick$={() => console.log(mongodb)}>
        </div>
    );
});


============================= src/components/mongo/404.tsx ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { qrl } from "@khulnasoft.com/qwik";
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./404.tsx__404_component_zRvoWc98eqo"), "_404_component_zRvoWc98eqo"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/components/mongo/404.tsx\"],\"names\":[],\"mappings\":\";;AAGA,6BAAe,kHAKZ\"}")
============================= src/components/mongo/404.tsx__404_component_zRvoWc98eqo.tsx (ENTRY POINT)==

import { qrl } from "@khulnasoft.com/qwik";
export const _404_component_zRvoWc98eqo = ()=>{
    return <div onClick$={/*#__PURE__*/ qrl(()=>import("./404.tsx__404_component_div_onClick_OiMo9dvEW9Q"), "_404_component_div_onClick_OiMo9dvEW9Q")}>
        </div>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/components/mongo/404.tsx\"],\"names\":[],\"mappings\":\";0CAG0B;IACtB,QACK,IAAI,uIAAsC;QAC3C,EAAE;AAEV\"}")
/*
{
  "origin": "src/components/mongo/404.tsx",
  "name": "_404_component_zRvoWc98eqo",
  "entry": null,
  "displayName": "404.tsx__404_component",
  "hash": "zRvoWc98eqo",
  "canonicalFilename": "404.tsx__404_component_zRvoWc98eqo",
  "path": "src/components/mongo",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    76,
    172
  ]
}
*/
============================= src/components/mongo/404.tsx__404_component_div_onClick_OiMo9dvEW9Q.tsx (ENTRY POINT)==

export const _404_component_div_onClick_OiMo9dvEW9Q = ()=>console.log(mongodb);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/src/components/mongo/404.tsx\"],\"names\":[],\"mappings\":\"sDAKuB,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "src/components/mongo/404.tsx",
  "name": "_404_component_div_onClick_OiMo9dvEW9Q",
  "entry": null,
  "displayName": "404.tsx__404_component_div_onClick",
  "hash": "OiMo9dvEW9Q",
  "canonicalFilename": "404.tsx__404_component_div_onClick_OiMo9dvEW9Q",
  "path": "src/components/mongo",
  "extension": "tsx",
  "parent": "_404_component_zRvoWc98eqo",
  "ctxKind": "jSXProp",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    120,
    146
  ]
}
*/
== DIAGNOSTICS ==

[]
